Adding some more in progress notebooks

--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: TCGA Cohort Mutation Counts\n",
+    "path: TCGA\n",
+    "authors:\n",
+    "- kellrott\n",
+    "tags:\n",
+    "- tcga\n",
+    "- mutations\n",
+    "- mc3\n",
+    "created_at: 2018-05-09\n",
+    "updated_at: 2018-05-09\n",
+    "tldr: Find the number of mutations per gene for TCGA cohort\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
