Continuing work to update examples

--- a/DrugList.ipynb
+++ b/DrugList.ipynb
@@ -2,30 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import aql\n",
-    "conn = aql.Connection(\"http://arachne.compbio.ohsu.edu\")\n",
-    "O = conn.graph(\"bmeg\")"
+    "import gripql\n",
+    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO]\t2019-02-21 09:57:47,900\t5 results received in 0 seconds\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{u'count': 1046}]\n"
+      "[<AttrDict({'gid': 'Sample:ACH-000017', 'label': 'Sample', 'data': {'ccle_attributes': {'Aliases': 'SK-BR-3', 'CCLE_Name': 'SKBR3_BREAST', 'COSMIC_ID': '', 'DepMap_ID': 'ACH-000017', 'Gender': 'Female', 'Primary Disease': 'Breast Cancer', 'Sanger ID': '', 'Source': 'NIBRI', 'Subtype Disease': 'Carcinoma'}, 'sample_id': 'ACH-000017'}})>, <AttrDict({'gid': 'Sample:ACH-000031', 'label': 'Sample', 'data': {'ccle_attributes': {'Aliases': 'Panc 02.13', 'CCLE_Name': 'PANC0213_PANCREAS', 'COSMIC_ID': '', 'DepMap_ID': 'ACH-000031', 'Gender': 'Female', 'Primary Disease': 'Pancreatic Cancer', 'Sanger ID': '', 'Source': 'NIBRI', 'Subtype Disease': 'Ductal Adenocarcinoma, exocrine'}, 'sample_id': 'ACH-000031'}})>, <AttrDict({'gid': 'Sample:ACH-000012', 'label': 'Sample', 'data': {'ccle_attributes': {'Aliases': 'HCC827', 'CCLE_Name': 'HCC827_LUNG', 'COSMIC_ID': '1240146', 'DepMap_ID': 'ACH-000012', 'Gender': 'Female', 'Primary Disease': 'Lung Cancer', 'Sanger ID': '354', 'Source': 'ATCC', 'Subtype Disease': 'Non-Small Cell Lung Cancer (NSCLC), Adenocarcinoma'}, 'sample_id': 'ACH-000012'}})>, <AttrDict({'gid': 'Sample:ACH-000057', 'label': 'Sample', 'data': {'ccle_attributes': {'Aliases': 'OPM-1', 'CCLE_Name': 'OPM1_HAEMATOPOIETIC_AND_LYMPHOID_TISSUE', 'COSMIC_ID': '', 'DepMap_ID': 'ACH-000057', 'Gender': '-1', 'Primary Disease': 'Myeloma', 'Sanger ID': '', 'Source': '', 'Subtype Disease': 'Multiple Myeloma'}, 'sample_id': 'ACH-000057'}})>, <AttrDict({'gid': 'Sample:ACH-000064', 'label': 'Sample', 'data': {'ccle_attributes': {'Aliases': 'SALE', 'CCLE_Name': 'SALE_LUNG', 'COSMIC_ID': '', 'DepMap_ID': 'ACH-000064', 'Gender': '', 'Primary Disease': 'Lung Cancer', 'Sanger ID': '', 'Source': '', 'Subtype Disease': 'Immortalized'}, 'sample_id': 'ACH-000064'}})>]\n"
      ]
     }
    ],
    "source": [
-    "print list(O.query().V().where(aql.eq(\"_label\", \"Biosample\")).where(aql.eq(\"datasetId\", \"ccle\")).count())"
+    "print( list(O.query().V().hasLabel(\"Sample\").limit(5) ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO]\t2019-02-21 15:44:00,535\t504 results received in 0 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "aliquots = list(O.query().V(\"Program:CCLE\").in_(\"InProgram\").in_(\"InProject\").in_(\"SampleFor\").in_(\"AliquotFor\").render(\"$._gid\"))"
    ]
   },
   {
@@ -1470,21 +1494,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
