Updating aggregation examples

--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -59,6 +59,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countDF = pandas.Series(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goi = list(countDF.index[countDF >= 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO]\t2019-03-04 14:52:32,121\t10 results received in 0 seconds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENSG00000007174 DNAH9\n",
+      "ENSG00000081479 LRP2\n",
+      "ENSG00000134086 VHL\n",
+      "ENSG00000151914 DST\n",
+      "ENSG00000155657 TTN\n",
+      "ENSG00000163930 BAP1\n",
+      "ENSG00000163939 PBRM1\n",
+      "ENSG00000181143 MUC16\n",
+      "ENSG00000181555 SETD2\n",
+      "ENSG00000198793 MTOR\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e,g in O.query().V(goi).render([\"$._gid\" ,\"$.symbol\"]):\n",
+    "    print(e,g)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
