--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,55 +12,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count number of Projects per Program"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-22 13:17:12,164\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-04 14:58:56,556\t1 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<AttrDict({'project_count': {'buckets': [{'key': 'DepMap', 'value': 38}, {'key': 'TCGA', 'value': 33}, {'key': 'GTEx', 'value': 31}, {'key': 'CTRP', 'value': 30}, {'key': 'GDSC', 'value': 27}, {'key': 'CCLE', 'value': 26}, {'key': 'TARGET', 'value': 6}, {'key': 'CTSP', 'value': 1}, {'key': 'VAREPOP', 'value': 1}, {'key': 'NCICCR', 'value': 1}, {'key': 'FM', 'value': 1}]}})>]\n"
+      "Program:DepMap\t38\n",
+      "Program:TCGA\t33\n",
+      "Program:GTEx\t31\n",
+      "Program:CTRP\t30\n",
+      "Program:GDSC\t27\n",
+      "Program:CCLE\t26\n",
+      "Program:TARGET\t6\n",
+      "Program:NCICCR\t1\n",
+      "Program:CTSP\t1\n",
+      "Program:FM\t1\n",
+      "Program:VAREPOP\t1\n"
      ]
     }
    ],
    "source": [
     "q = O.query().V().hasLabel(\"Program\").as_(\"p\").in_(\"InProgram\").select(\"p\")\n",
-    "q = q.aggregate(gripql.term(\"project_count\", \"program_id\"))\n",
-    "print(list(q.limit(1)))"
+    "q = q.aggregate(gripql.term(\"project_count\", \"$._gid\"))\n",
+    "for row in q.execute()[0][\"project_count\"][\"buckets\"]:\n",
+    "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count number of Samples per Program"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-22 13:17:55,773\t1 results received in 7 seconds\n"
+      "[INFO]\t2019-03-04 14:59:26,374\t1 results received in 5 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<AttrDict({'project_count': {'buckets': [{'key': 'FM', 'value': 18004}, {'key': 'TCGA', 'value': 11315}, {'key': 'GTEx', 'value': 8859}, {'key': 'TARGET', 'value': 3236}, {'key': 'DepMap', 'value': 1700}, {'key': 'CTRP', 'value': 841}, {'key': 'GDSC', 'value': 746}, {'key': 'CCLE', 'value': 504}, {'key': 'NCICCR', 'value': 489}, {'key': 'CTSP', 'value': 45}, {'key': 'VAREPOP', 'value': 7}]}})>]\n"
+      "Program:FM\t18004\n",
+      "Program:TCGA\t11315\n",
+      "Program:GTEx\t8859\n",
+      "Program:TARGET\t3236\n",
+      "Program:DepMap\t1700\n",
+      "Program:CTRP\t841\n",
+      "Program:GDSC\t746\n",
+      "Program:CCLE\t504\n",
+      "Program:NCICCR\t489\n",
+      "Program:CTSP\t45\n",
+      "Program:VAREPOP\t7\n"
      ]
     }
    ],
    "source": [
     "q = O.query().V().hasLabel(\"Program\").as_(\"p\").in_(\"InProgram\").in_(\"InProject\").select(\"p\")\n",
-    "q = q.aggregate(gripql.term(\"project_count\", \"program_id\"))\n",
-    "print(list(q.limit(1)))"
+    "q = q.aggregate(gripql.term(\"sample_count\", \"$._gid\"))\n",
+    "for row in q.execute()[0][\"sample_count\"][\"buckets\"]:\n",
+    "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
    ]
   },
   {
