Working on examples and formatting

--- a/DrugList.ipynb
+++ b/DrugList.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Get compound Information\n",
+    "draft: True\n",
+    "authors:\n",
+    "- kellrott\n",
+    "tags:\n",
+    "- ccle\n",
+    "- drug response\n",
+    "created_at: 2018-05-09\n",
+    "updated_at: 2018-05-09\n",
+    "tldr: Look up an allele\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1508,7 +1526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
