--- a/CCLE_T-Test.ipynb
+++ b/CCLE_T-Test.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: CCLE Mutation Response T-Test\n",
+    "title: Drug Response\n",
     "path: CCLE/t-test\n",
     "authors:\n",
     "- kellrott\n",
@@ -992,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
