--- a/CNA_Histogram.ipynb
+++ b/CNA_Histogram.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: CNA Histogram\n",
+    "authors:\n",
+    "- kellrott\n",
+    "tags:\n",
+    "- ccle\n",
+    "- drug response\n",
+    "created_at: 2018-05-09\n",
+    "updated_at: 2018-05-09\n",
+    "tldr: Build a histogram from the copy number alteration values for genes in a TCGA cohort\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -150,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
