--- a/KM.ipynb
+++ b/KM.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "title: Kaplan Meier\n",
+    "draft: True\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
@@ -116,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
