--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: TCGA Cohort Mutation Counts\n",
+    "title: Cohort Mutation Counts\n",
     "path: TCGA\n",
     "authors:\n",
     "- kellrott\n",
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
