--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Sample Counts\n",
+    "weight: 40\n",
+    "authors:\n",
+    "- kellrott\n",
+    "tags:\n",
+    "- ccle\n",
+    "- drug response\n",
+    "created_at: 2018-05-09\n",
+    "updated_at: 2018-05-09\n",
+    "tldr: Use aggregation methods to count number of samples in a program\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -123,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
