Updating example to point at bmeg.io

--- a/AlleleLookup.ipynb
+++ b/AlleleLookup.ipynb
@@ -26,8 +26,26 @@
    "source": [
     "import hashlib\n",
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BMEG stores alleles using a hashed version of the alteration description\n",
+    "```\n",
+    "genome:chromosome:start:end:reference_bases:alternate_bases\n",
+    "```\n",
+    "So an example allele would be:\n",
+    "```\n",
+    "GRCh37:1:27100988:27100988:C:T\n",
+    "```\n",
+    "Which is then run though a `sha1` hash to get the string\n",
+    "```\n",
+    "0b0a7a23d57414e768677a6cbd764563922209df\n",
+    "```"
    ]
   },
   {
@@ -57,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-05 10:39:04,389\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 15:46:39,647\t1 results received in 0 seconds\n"
      ]
     },
     {
