--- a/CNA_Histogram.ipynb
+++ b/CNA_Histogram.ipynb
@@ -26,8 +26,15 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Ensembl Gene ids for genes of interest"
    ]
   },
   {
@@ -39,9 +46,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-20 16:54:18,146\t1 results received in 0 seconds\n",
-      "[INFO]\t2019-02-20 16:54:18,277\t1 results received in 0 seconds\n",
-      "[INFO]\t2019-02-20 16:54:18,408\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 15:50:32,116\t1 results received in 0 seconds\n",
+      "[INFO]\t2019-03-11 15:50:32,355\t1 results received in 0 seconds\n",
+      "[INFO]\t2019-03-11 15:50:32,599\t1 results received in 0 seconds\n"
      ]
     }
    ],
@@ -76,22 +83,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each gene of interest, obtain the copy number alteration values and aggregate them by gene."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-20 16:54:23,109\t1 results received in 4 seconds\n"
+      "[INFO]\t2019-03-11 16:22:24,556\t1 results received in 5 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<AttrDict({'ENSG00000139687': {'buckets': [{'key': '0', 'value': 269}, {'key': '-1', 'value': 139}, {'key': '-2', 'value': 81}, {'key': '1', 'value': 3}]}, 'ENSG00000141510': {'buckets': [{'key': '0', 'value': 329}, {'key': '-1', 'value': 126}, {'key': '-2', 'value': 37}]}, 'ENSG00000171862': {'buckets': [{'key': '0', 'value': 327}, {'key': '-2', 'value': 95}, {'key': '-1', 'value': 64}, {'key': '1', 'value': 5}, {'key': '2', 'value': 1}]}})>]\n"
+      "ENSG00000139687\t0:269\n",
+      "ENSG00000139687\t-1:139\n",
+      "ENSG00000139687\t-2:81\n",
+      "ENSG00000139687\t1:3\n",
+      "ENSG00000141510\t0:329\n",
+      "ENSG00000141510\t-1:126\n",
+      "ENSG00000141510\t-2:37\n",
+      "ENSG00000171862\t0:327\n",
+      "ENSG00000171862\t-2:95\n",
+      "ENSG00000171862\t-1:64\n",
+      "ENSG00000171862\t1:5\n",
+      "ENSG00000171862\t2:1\n"
      ]
     }
    ],
@@ -103,12 +128,21 @@
     ")\n",
     "\n",
     "res = list(q)\n",
-    "print(res)"
+    "for r in res[0]:\n",
+    "    for b in res[0][r]['buckets']:\n",
+    "        print(\"%s\\t%s:%s\" % (r, b['key'], b['value']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a barchart showing the counts of copy number altered samples in the cohort."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +151,7 @@
        "<BarContainer object of 4 artists>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
