--- a/DrugList.ipynb
+++ b/DrugList.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
