--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -27,20 +27,27 @@
    "source": [
     "import pandas\n",
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select all the tumor samples in the TCGA KIRC cohort, and aggregate across the `ensembl_gene` field."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-01 17:22:30,156\t1 results received in 6 seconds\n"
+      "[INFO]\t2019-03-11 16:14:14,703\t1 results received in 2 seconds\n"
      ]
     }
    ],
@@ -58,8 +65,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a Pandas.Series with the output and find all the genes with 20 or more mutations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-04 14:52:32,121\t10 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 16:18:28,689\t10 results received in 0 seconds\n"
      ]
     },
     {
