--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-04 14:58:56,556\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 16:13:02,635\t1 results received in 0 seconds\n"
      ]
     },
     {
@@ -59,10 +59,10 @@
       "Program:GDSC\t27\n",
       "Program:CCLE\t26\n",
       "Program:TARGET\t6\n",
+      "Program:VAREPOP\t1\n",
       "Program:NCICCR\t1\n",
-      "Program:CTSP\t1\n",
       "Program:FM\t1\n",
-      "Program:VAREPOP\t1\n"
+      "Program:CTSP\t1\n"
      ]
     }
    ],
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-04 14:59:26,374\t1 results received in 5 seconds\n"
+      "[INFO]\t2019-03-11 16:13:09,049\t1 results received in 3 seconds\n"
      ]
     },
     {
