--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -27,8 +27,8 @@
    "source": [
     "import pandas\n",
     "import gripql\n",
-    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc1_2\")"
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
+    "O = conn.graph(\"bmeg_rc2\")"
    ]
   },
   {
@@ -47,14 +47,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 16:14:14,703\t1 results received in 2 seconds\n"
+      "[INFO]\t2019-07-24 17:37:39,468\t1 results received in 1 seconds\n"
      ]
     }
    ],
    "source": [
     "q = O.query().V(\"Project:TCGA-KIRC\")\n",
-    "q = q.in_(\"InProject\").in_(\"SampleFor\").has(gripql.eq(\"gdc_attributes.sample_type\", \"Primary Tumor\"))\n",
-    "q = q.in_(\"AliquotFor\").in_(\"CallsetFor\").outE(\"AlleleCall\")\n",
+    "q = q.out(\"cases\").out(\"samples\").has(gripql.eq(\"gdc_attributes.sample_type\", \"Primary Tumor\"))\n",
+    "q = q.out(\"aliquots\").out(\"somatic_callsets\").outE(\"alleles\")\n",
     "q = q.has(gripql.contains(\"methods\", \"MUTECT\"))\n",
     "q = q.aggregate(gripql.term(\"geneCount\", \"ensembl_gene\"))\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,36 +91,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 16:18:28,689\t10 results received in 0 seconds\n"
+      "[INFO]\t2019-07-24 17:37:39,515\t10 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENSG00000007174 DNAH9\n",
-      "ENSG00000081479 LRP2\n",
-      "ENSG00000134086 VHL\n",
-      "ENSG00000151914 DST\n",
-      "ENSG00000155657 TTN\n",
-      "ENSG00000163930 BAP1\n",
-      "ENSG00000163939 PBRM1\n",
-      "ENSG00000181143 MUC16\n",
-      "ENSG00000181555 SETD2\n",
-      "ENSG00000198793 MTOR\n"
+      "ENSG00000007174 (DNAH9) = 22\n",
+      "ENSG00000081479 (LRP2) = 22\n",
+      "ENSG00000134086 (VHL) = 113\n",
+      "ENSG00000151914 (DST) = 27\n",
+      "ENSG00000155657 (TTN) = 120\n",
+      "ENSG00000163930 (BAP1) = 30\n",
+      "ENSG00000163939 (PBRM1) = 74\n",
+      "ENSG00000181143 (MUC16) = 42\n",
+      "ENSG00000181555 (SETD2) = 34\n",
+      "ENSG00000198793 (MTOR) = 34\n"
      ]
     }
    ],
    "source": [
     "for e,g in O.query().V(goi).render([\"$._gid\" ,\"$.symbol\"]):\n",
-    "    print(e,g)"
+    "    print(\"%s (%s) = %d\" % (e,g, countDF[e]))"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
