--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -25,8 +25,8 @@
    "outputs": [],
    "source": [
     "import gripql\n",
-    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc1_2\")"
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
+    "O = conn.graph(\"bmeg_rc2\")"
    ]
   },
   {
@@ -38,36 +38,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 16:13:02,635\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-07-26 18:01:50,332\t1 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Program:DepMap\t38\n",
+      "Program:CCLE\t37\n",
       "Program:TCGA\t33\n",
       "Program:GTEx\t31\n",
+      "Program:GDSC\t31\n",
       "Program:CTRP\t30\n",
-      "Program:GDSC\t27\n",
-      "Program:CCLE\t26\n",
-      "Program:TARGET\t6\n",
-      "Program:VAREPOP\t1\n",
-      "Program:NCICCR\t1\n",
+      "Program:TARGET\t7\n",
+      "Program:CPTAC\t1\n",
       "Program:FM\t1\n",
-      "Program:CTSP\t1\n"
+      "Program:NCICCR\t1\n",
+      "Program:CTSP\t1\n",
+      "Program:HCMI\t1\n",
+      "Program:BEATAML1.0\t1\n",
+      "Program:VAREPOP\t1\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").in_(\"InProgram\").select(\"p\")\n",
+    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").select(\"p\")\n",
     "q = q.aggregate(gripql.term(\"project_count\", \"$._gid\"))\n",
     "for row in q.execute()[0][\"project_count\"][\"buckets\"]:\n",
     "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
@@ -82,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 16:13:09,049\t1 results received in 3 seconds\n"
+      "[INFO]\t2019-07-26 18:02:37,232\t1 results received in 2 seconds\n"
      ]
     },
     {
@@ -98,20 +100,22 @@
      "text": [
       "Program:FM\t18004\n",
       "Program:TCGA\t11315\n",
-      "Program:GTEx\t8859\n",
-      "Program:TARGET\t3236\n",
-      "Program:DepMap\t1700\n",
-      "Program:CTRP\t841\n",
-      "Program:GDSC\t746\n",
-      "Program:CCLE\t504\n",
+      "Program:TARGET\t3360\n",
+      "Program:CCLE\t1617\n",
+      "Program:GDSC\t1001\n",
+      "Program:CTRP\t886\n",
+      "Program:GTEx\t752\n",
       "Program:NCICCR\t489\n",
+      "Program:CPTAC\t322\n",
+      "Program:BEATAML1.0\t56\n",
       "Program:CTSP\t45\n",
+      "Program:HCMI\t7\n",
       "Program:VAREPOP\t7\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").in_(\"InProgram\").in_(\"InProject\").select(\"p\")\n",
+    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").out(\"cases\").select(\"p\")\n",
     "q = q.aggregate(gripql.term(\"sample_count\", \"$._gid\"))\n",
     "for row in q.execute()[0][\"sample_count\"][\"buckets\"]:\n",
     "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
@@ -141,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
