Cleaning up some of the notebooks

--- a/Expression.ipynb
+++ b/Expression.ipynb
@@ -6,11 +6,12 @@
    "source": [
     "---\n",
     "title: Expression Data\n",
+    "weight: 70\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
-    "- ccle\n",
-    "- drug response\n",
+    "- tcga\n",
+    "- gene expression\n",
     "created_at: 2018-05-09\n",
     "updated_at: 2018-05-09\n",
     "tldr: Build a pandas matrix of expression data\n",
@@ -249,13 +250,6 @@
    "source": [
     "sns.kdeplot(samples['ENSG00000000003'], color=\"g\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -274,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
