--- a/ExpressionDifference.ipynb
+++ b/ExpressionDifference.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "title: Differential Expression\n",
+    "weight: 71\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
@@ -304,13 +305,6 @@
     "for row in O.query().V(\"ENSG00000168484\").out(\"gene_ontology_terms\"):\n",
     "    print(row.gid, row.data.definition)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -329,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
