--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -7,6 +7,7 @@
     "---\n",
     "title: Cohort Mutation Counts\n",
     "path: TCGA\n",
+    "weight: 60\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
@@ -17,6 +18,13 @@
     "updated_at: 2018-05-09\n",
     "tldr: Find the number of mutations per gene for TCGA cohort\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the number of mutations per gene for TCGA cohort"
    ]
   },
   {
@@ -122,13 +130,6 @@
     "for e,g in O.query().V(goi).render([\"$._gid\" ,\"$.symbol\"]):\n",
     "    print(\"%s (%s) = %d\" % (e,g, countDF[e]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -147,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
