--- a/TCGA_ChromSNV.ipynb
+++ b/TCGA_ChromSNV.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "title: Cohort Genomics\n",
+    "weight: 64\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
@@ -109,13 +110,6 @@
     "    count.append(i[\"value\"])\n",
     "plt.bar(name, count, width=0.35)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
