--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Count number of Projects per Program"
+    "Count number of Projects per Program"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Count number of Samples per Program"
+    "Count number of Samples per Program"
    ]
   },
   {
@@ -120,13 +120,6 @@
     "for row in q.execute()[0][\"sample_count\"][\"buckets\"]:\n",
     "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -145,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
